tests/miniJava/pos/000919_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 . length ) while ( 0 ) { } else System.out.println ( { } ) ; } }
