tests/miniJava/neg/005115_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java String , int [] java ) { return 0 ; } }
